# cs107_team43

./: .coverage  LICENSE  README.md  d_6b41a54a7cf32ca2___init___py.html  d_6b41a54a7cf32ca2_test_expression_py.html  d_e09e0e0977e863e1___init___py.html  d_e09e0e0977e863e1_forward_mode_py.html  d_e09e0e0977e863e1_reverse_mode_py.html  d_e5589248e911ee12___init___py.html  index.html  pyproject.toml  status.json
.github/workflows/: coverage.yml  test.yml
Autodiff43/: __init__.py
Autodiff43.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Autodiff43/logic/: __init__.py  base.py  core.py  forward_mode.py  reverse_mode.py  utils.py
Autodiff43/test/: .coverage  __init__.py  test_coverage.py  test_expression.py
docs/: README.md  documentation.md  future_features.md  milestone1.md  milestone2.md  milestone2_progress.md
